{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 134,
  "lineage": "d98e5c86-3c21-fd64-21de-10f4a1f0b988",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261891914465:vpc/vpc-f044368a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-728dc21e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-c7617ebc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-f044368a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-e0d9209e",
            "owner_id": "261891914465",
            "tags": {
              "Name": "vpc2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache-cs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:261891914465:instance/i-06768023eed716920",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f17bc9b39429d169",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06768023eed716920",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-016cc1271c0f5aaa2",
            "private_dns": "ip-172-31-24-160.ec2.internal",
            "private_ip": "172.31.24.160",
            "public_dns": "ec2-52-91-98-133.compute-1.amazonaws.com",
            "public_ip": "52.91.98.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f17bc9b39429d169",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "allow_web-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-916395dc",
            "tags": {
              "Name": "apache-cs"
            },
            "tags_all": {
              "Name": "apache-cs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c86c5b31f44d2df5"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-cs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:261891914465:instance/i-00523d767fbc4351d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0343bcebd585fd3f3",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00523d767fbc4351d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03338a7d8f0b6085f",
            "private_dns": "ip-172-31-39-75.ec2.internal",
            "private_ip": "172.31.39.75",
            "public_dns": "ec2-35-173-181-118.compute-1.amazonaws.com",
            "public_ip": "35.173.181.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0343bcebd585fd3f3",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "allow_web-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6880a334",
            "tags": {
              "Name": "nginx-cs"
            },
            "tags_all": {
              "Name": "nginx-cs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c86c5b31f44d2df5"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:261891914465:loadbalancer/app/credit-saison-alb/eec5a00f49f21c1f",
            "arn_suffix": "app/credit-saison-alb/eec5a00f49f21c1f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "credit-saison-alb-295673999.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:261891914465:loadbalancer/app/credit-saison-alb/eec5a00f49f21c1f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "credit-saison-alb",
            "security_groups": [
              "sg-07607698822ba3cd8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-5334416d"
              },
              {
                "subnet_id": "subnet-5e908851"
              },
              {
                "subnet_id": "subnet-6880a334"
              },
              {
                "subnet_id": "subnet-916395dc"
              },
              {
                "subnet_id": "subnet-bf8ba691"
              },
              {
                "subnet_id": "subnet-cbe7c1ac"
              }
            ],
            "subnets": [
              "subnet-5334416d",
              "subnet-5e908851",
              "subnet-6880a334",
              "subnet-916395dc",
              "subnet-bf8ba691",
              "subnet-cbe7c1ac"
            ],
            "tags": {
              "Name": "credit-saison-alb"
            },
            "tags_all": {
              "Name": "credit-saison-alb"
            },
            "vpc_id": "vpc-f044368a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_lb-http",
            "data.aws_subnet_ids.subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:261891914465:listener/app/credit-saison-alb/eec5a00f49f21c1f/c73060e4870995a0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:261891914465:targetgroup/credit-saison-tg/a4feef6de928e764",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:261891914465:listener/app/credit-saison-alb/eec5a00f49f21c1f/c73060e4870995a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:261891914465:loadbalancer/app/credit-saison-alb/eec5a00f49f21c1f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application-lb",
            "aws_lb_target_group.target-group",
            "aws_security_group.allow_lb-http",
            "data.aws_subnet_ids.subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:261891914465:targetgroup/credit-saison-tg/a4feef6de928e764",
            "arn_suffix": "targetgroup/credit-saison-tg/a4feef6de928e764",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:261891914465:targetgroup/credit-saison-tg/a4feef6de928e764",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "credit-saison-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-f044368a"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "apache-cs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:261891914465:targetgroup/credit-saison-tg/a4feef6de928e764-20220620120316099700000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:261891914465:targetgroup/credit-saison-tg/a4feef6de928e764",
            "target_id": "i-06768023eed716920"
          },
          "dependencies": [
            "aws_instance.apache-cs",
            "aws_lb_target_group.target-group",
            "aws_security_group.allow_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx-cs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:261891914465:targetgroup/credit-saison-tg/a4feef6de928e764-20220620120314715900000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:261891914465:targetgroup/credit-saison-tg/a4feef6de928e764",
            "target_id": "i-00523d767fbc4351d"
          },
          "dependencies": [
            "aws_instance.nginx-cs",
            "aws_lb_target_group.target-group",
            "aws_security_group.allow_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261891914465:security-group/sg-0c86c5b31f44d2df5",
            "description": "Allow WEB inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "bullhit",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c86c5b31f44d2df5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web-1",
            "name_prefix": "",
            "owner_id": "261891914465",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-f044368a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_lb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261891914465:security-group/sg-07607698822ba3cd8",
            "description": "Allow WEB inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07607698822ba3cd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web-lb",
            "name_prefix": "",
            "owner_id": "261891914465",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_alb"
            },
            "tags_all": {
              "Name": "allow_alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-f044368a"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}